Overflow issue.

--- a/src/styles/50-core-components/_site-head.scss
+++ b/src/styles/50-core-components/_site-head.scss
@@ -97,8 +97,8 @@
     }
 
     .site-head__img {
-      // overflow-x: clip;
-      // overflow-y: visible;
+      overflow-x: clip;
+      overflow-y: visible;
 
       .pattern-circle {
         position: absolute;
